trunk/Archive2/44/71913e7a5d9cf9/output
main.cpp:2:5: error: expected unqualified-id before 'for'
     for ( int i=0; i<3; i++) 
     ^
main.cpp:2:20: error: 'i' does not name a type
     for ( int i=0; i<3; i++) 
                    ^
main.cpp:2:25: error: 'i' does not name a type
     for ( int i=0; i<3; i++) 
                         ^
main.cpp:3:23: error: 'j' does not name a type
         for (int j=0; j<3; j++) {
                       ^
main.cpp:3:28: error: 'j' does not name a type
         for (int j=0; j<3; j++) {
                            ^
main.cpp:11:5: error: 'l1' does not name a type
     l1:
     ^
main.cpp:12:5: error: expected declaration before '}' token
     }
     ^
